[MODORDSTOR-472]. Remove custom fields reference data loading (#504)
* [MODORDSTOR-472]. Remove custom fields reference data loading

* [MODORDSTOR-472]. Comment custom-fields interface